chore: fix spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -212,6 +212,7 @@ footer {
     font-family: monospace;
     font-size: 16px;
     font-weight: 900;
+    letter-spacing: -0.6px;
 }
 
 .bg-color-macaroni {
